--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
             <img src="ayzlogo.jpeg" alt="AyzPlastik Logo" id="logo">
         </div>
         <h1>AyzPlastik Ürün Kataloğu</h1>
+        <div class="dropdown">
+            <select id="productMenu" onchange="navigateToProduct()">
+                <option value="">Ürün Seçin</option>
+                <option value="sarjli_isikli_bistro_masa">Şarjlı Işıklı Bistro Masa</option>
+                <option value="fisli_isikli_top">Fişli Işıklı Top</option>
+                <option value="fisli_bistro_masa">Fişli Bistro Masa</option>
+                <option value="fisli_plastik_saksi">Fişli Plastik Saksı</option>
+            </select>
+        </div>
     </header>
 
     <!-- İletişim Bilgileri -->
@@ -77,6 +86,18 @@
         window.onclick = function(event) {
             if (event.target == document.getElementById('myModal') || event.target == document.querySelector('.close')) {
                 closeModal();
+            }
+        }
+
+        // Dropdown menüden ürün seçildiğinde yönlendirme işlevi
+        function navigateToProduct() {
+            const productMenu = document.getElementById('productMenu');
+            const selectedProduct = productMenu.value;
+            if (selectedProduct) {
+                const productElement = document.getElementById(selectedProduct);
+                if (productElement) {
+                    productElement.scrollIntoView({ behavior: 'smooth' });
+                }
             }
         }
     </script>
