--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <span class="instagram-text">AYZPLASTIK</span>
             </a>
             <!-- WhatsApp Logo ve Link -->
-            <a href="https://wa.me/05542345454" class="whatsapp-link">
+            <a href="https://wa.me/+905542345454" class="whatsapp-link">
                 <img src="wplogo.png" alt="WhatsApp Logo" id="whatsapp-logo">
                 <span class="whatsapp-number">05542345454</span>
             </a>
