--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AyzPlastik Ürün Kataloğu</title>
+    <title>AyzPlastik </title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -12,7 +12,8 @@
         <div id="logo-container">
             <img src="ayzlogo.jpeg" alt="AyzPlastik Logo" id="logo">
         </div>
-        <h1>AyzPlastik Ürün Kataloğu</h1>
+        <h1>AyzPlastik</h1>
+        <h2 class="rgb-header">KALİTENİN ADI</h2>
 
         <!-- Sidebar -->
         <aside class="sidebar">
