--- a/admin.html
+++ b/admin.html
@@ -2,6 +2,7 @@
 <html lang="tr">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Paneli</title>
 
     <!-- CSS -->
@@ -12,9 +13,90 @@
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 
+    <!-- Firebase -->
     <script type="module" src="./firebase-config.js"></script>
     <script type="module" src="./admin.js"></script>
- 
+
+    <style>
+        body {
+            margin: 0; padding: 0; font-family: Arial, sans-serif; background: #f7f7f7;
+        }
+        .container {
+            max-width: 700px;
+            margin: auto;
+            padding: 20px;
+        }
+        h1 { text-align: center; color: #333; }
+        .form-card {
+            background: #fff;
+            border-radius: 10px;
+            padding: 20px;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+            margin-bottom: 30px;
+        }
+        .form-card input, .form-card textarea, .form-card button {
+            width: 100%;
+            margin-bottom: 15px;
+            padding: 10px;
+            border-radius: 8px;
+            border: 1px solid #ccc;
+            font-size: 16px;
+        }
+        .form-card button {
+            background: #3498db;
+            color: #fff;
+            border: none;
+            transition: 0.3s;
+        }
+        .form-card button:hover {
+            background: #2980b9;
+        }
+        .filter-container {
+            margin-bottom: 20px;
+        }
+        .urun-card {
+            background: #fff;
+            border-radius: 10px;
+            padding: 15px;
+            margin-bottom: 20px;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+        }
+        .urun-card img {
+            width: 100%;
+            border-radius: 8px;
+            margin: 10px 0;
+        }
+        .urun-buttons button {
+            width: 48%;
+            margin: 5px 1%;
+            padding: 10px;
+            border-radius: 8px;
+            font-weight: bold;
+            cursor: pointer;
+            border: none;
+        }
+        .urun-buttons button:first-child { background: #e74c3c; color: #fff; }
+        .urun-buttons button:last-child { background: #2ecc71; color: #fff; }
+
+        .modal {
+            display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%;
+            background: rgba(0,0,0,0.6); z-index: 999;
+        }
+        .modal-content {
+            background: #fff; padding: 20px; border-radius: 10px;
+            position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);
+            width: 90%; max-width: 400px;
+        }
+        @media (max-width: 600px) {
+            .form-card input, .form-card textarea, .form-card button {
+                font-size: 14px;
+            }
+            .urun-buttons button {
+                font-size: 14px;
+                padding: 8px;
+            }
+        }
+    </style>
 </head>
 
 <body>
@@ -27,7 +109,10 @@
             <input type="text" id="isim" placeholder="Ürün İsmi">
             <input type="number" id="fiyat" placeholder="Fiyat (TL)">
             <textarea id="ozellikler" placeholder="Özellikler (virgülle ayır)"></textarea>
-            <input type="file" id="resimDosya" multiple>
+
+            <!-- Mobil uyumlu resim seçici -->
+            <input type="file" id="resimDosya" accept="image/*" capture="environment" multiple>
+
             <button id="ekleBtn">Ekle</button>
             <button id="kaydetBtn" style="display:none;">Kaydet</button>
         </div>
